<resources>
    <string name="app_name">DogVIP</string>
    <string name="facebook_app_id">206869873166065</string>
    <string name="fb_login_protocol_scheme">fb206869873166065</string>
    <string name="account_type">com.dogvip.giannis</string>
    <string name="splash_fgmt">splash_fgmt</string>
    <string name="regstr_fgmt">register_fgmt</string>
    <string name="signin_fgmt">signin_fgmt</string>
    <string name="forgotpaswrd_fgmt">forgotpaswrd_fgmt</string>
    <string name="owner_fgmt">owner_fgmt</string>
    <string name="retained_signin_fgmt">retained_signin_fgmt</string>
    <string name="retained_signup_fgmt">retained_signup_fgmt</string>
    <string name="retained_forgotpass_fgmt">retained_forgotpass_fgmt</string>
    <string name="action">action</string>
    <string name="view_from">view_from</string>
    <string name="view_loaded_first_time">view_loaded_first_time</string>
    <string name="register_user">register_user</string>
    <string name="signin_user">signin_user</string>
    <string name="forgot_paswrd">forgot_password</string>
    <string name="logout_user">logout_user</string>
    <string name="forgot_paswrd_email_subaction">is_email_valid</string>
    <string name="forgot_paswrd_confpass_subaction">submit_paswrd</string>
    <string name="get_owner_details">get_owner_details</string>
    <string name="add_ownr">add_owner</string>
    <string name="edit_ownr">edit_owner</string>
    <string name="upload_ownr_img">upload_ownr_img</string>
    <string name="upload_pet_img">upload_pet_img</string>
    <string name="upload_petsitter_img">upload_petsitter_img</string>
    <string name="upload_prof_img">upload_prof_img</string>
    <string name="upload_petsitter_place_img">upload_petsitter_place_img</string>
    <string name="delete_owner_image">delete_owner_image</string>
    <string name="delete_petsitter_image">delete_petsitter_image</string>
    <string name="delete_prof_image">delete_prof_image</string>
    <string name="delete_owner">delete_owner</string>
    <string name="add_pet">add_pet</string>
    <string name="edit_pet">edit_pet</string>
    <string name="delete_pet">delete_pet</string>
    <string name="delete_pet_image">delete_pet_image</string>
    <string name="delete_petsitter_place_image">delete_petsitter_place_image</string>
    <string name="set_pet_main_image">set_pet_main_image</string>
    <string name="get_all_pets_by_filter">get_all_pets_by_filter</string>
    <string name="like_dislike_pet">like_dislike_pet</string>
    <string name="like_pet">like_pet</string>
    <string name="dislike_pet">dislike_pet</string>
    <string name="get_pet_likes">get_pet_likes</string>
    <string name="get_owner_pets">get_owner_pets</string>
    <string name="get_lost_found_entries">get_lost_found_entries</string>
    <string name="lost_subaction">lost</string>
    <string name="found_subaction">found</string>
    <string name="add_lost_pet">add_lost_pet</string>
    <string name="edit_lost_pet">edit_lost_pet</string>
    <string name="delete_lost_entry">delete_lost_entry</string>
    <string name="delete_found_entry">delete_found_entry</string>
    <string name="add_found_pet">add_found_pet</string>
    <string name="edit_found_pet">edit_found_pet</string>
    <string name="upload_found_pet_img">upload_found_pet_img</string>
    <string name="delete_found_pet_img">delete_found_pet_img</string>
    <string name="save_registration_token">save_registration_token</string>
    <string name="get_chat_rooom_msgs_by_participants">get_chat_rooom_msgs_by_participants</string>
    <string name="get_chat_rooom_msgs_by_chatid">get_chat_rooom_msgs_by_chatid</string>
    <string name="send_msg">send_msg</string>
    <string name="update_read_msgs">update_read_msgs</string>
    <string name="get_chat_rooms">get_chat_rooms</string>
    <string name="get_user_total_unread_msgs_and_pending_booking">get_user_total_unread_msgs_and_pending_booking</string>
    <string name="get_petsitter_details">get_petsitter_details</string>
    <string name="add_petsitter">add_petsitter</string>
    <string name="edit_petsitter">edit_petsitter</string>
    <string name="edit_base_details">edit_base_details</string>
    <string name="edit_other_details">edit_other_details</string>
    <string name="search_pet_sitters">search_pet_sitters</string>
    <string name="get_owner_sitter_bookings">get_owner_sitter_bookings</string>
    <string name="send_sitter_booking">send_sitter_booking</string>
    <string name="get_booking_details">get_booking_details</string>
    <string name="get_pending_sitter_bookings">get_pending_sitter_bookings</string>
    <string name="approve_booking">approve_booking</string>
    <string name="reject_booking">reject_booking</string>
    <string name="rate_sitter_booking">rate_sitter_booking</string>
    <string name="get_sitter_comments">get_sitter_comments</string>
    <string name="get_user_prof">get_user_prof</string>
    <string name="add_prof">add_prof</string>
    <string name="edit_prof">edit_prof</string>
    <string name="delete_prof">delete_prof</string>
    <string name="search_prof">search_prof</string>
    <string name="date_pick_action">date_pick_action</string>
    <string name="time_pick_action">time_pick_action</string>
    <string name="dialog_cancel_date_action">dialog_cancel_date_action</string>
    <string name="dialog_cancel_time_action">dialog_cancel_time_action</string>
    <string name="no_internet_connection">Σφάλμα. Χωρίς σύνδεση.</string>
    <string name="error">Σφάλμα. Προσπάθησε ξανά.</string>
    <string name="empty_required_fields">Συμπλήρωσε τα υποχρεωτικά πεδία *</string>
    <string name="invalid_email">Μη έγκυρο email.</string>
    <string name="email_not_available">Το συγκεκριμένο email υπάρχει.</string>
    <string name="invalid_password">Μη έγκυρος κωδικός.</string>
    <string name="pass_mismatch">Ασυμφωνία κωδικών.</string>
    <string name="invalid_email_password">Μη έγκυρο email ή κωδικός πρόσβασης.</string>
    <string name="account_not_verified">Ο λογαριασμός δεν έχει εγκριθεί ακόμα.</string>
    <string name="email_in_use">Το email χρησιμοποιείται από κάποιον αλλο λογαριασμό.</string>
    <string name="email_not_found">Το συγκεκριμένο email δεν βρέθηκε.</string>
    <string name="close">Κλεισιμο</string>
    <string name="please_wait">Παρακαλώ περιμένετε…</string>
    <string name="welcome">Καλωσήρθατε στη DogVIP.</string>
    <string name="confirm_account">Επιβεβαίωσε την εγγραφή σου μέσω email.</string>
    <string name="sign_up_cancel">Η εγγραφή ακυρώθηκε.</string>
    <string name="signin_cancel">Η είσοδος ακυρώθηκε.</string>
    <string name="reset_passwrd_request">Αλλαγή κωδικού στη DogVIP.</string>
    <string name="reset_passwrd_success">Η αλλαγή του κωδικού πραγματοποιήθηκε με επιτυχία.</string>
    <string name="new_password_is_same">Ο νέος κωδικός δεν μπορεί να είναι ίδιος με τον παλιό.</string>
    <string name="retry">Ξαναπροσπαθησε</string>
    <string name="grant_permission">Ενεργοποίησε την κατάλληλη άδεια μέσα από τις ρυθμίσεις της εφαρμογής.</string>
    <string name="image_size_limit">Όριο εικόνας: 6MB</string>
    <string name="invalid_image_size">Μη έγκυρο μέγεθος εικόνας.</string>
    <string name="invalid_file_type">Μη έγκυρος τύπος αρχείου.</string>
    <string name="no_camera_available">Απαιτείται κάμερα για τη συγκεκριμένη λειτουργία.</string>
    <string name="add_owner">Δημιουργία νέου</string>
    <string name="edit_owner">Επεξεργασία προφίλ</string>
    <string name="edit">Επεξεργασία</string>
    <string name="delete">Διαγραφή</string>
    <string name="phone_item">Τηλέφωνο</string>
    <string name="save">ΑΠΟΘΗΚΕΥΣΗ</string>
    <string name="submit">ΥΠΟΒΟΛΗ</string>
    <string name="clear">ΚΑΘΑΡΙΣΜΟΣ</string>
    <string name="required_fields_owner">* Υποχρεωτικά πεδία. \n \n ** Με τα παρακάτω στοιχεία καταχωρείσαι σαν ιδιοκτήτης στην εφαρμογή.</string>
    <string name="required_fields_petsitter">* Υποχρεωτικά πεδία. \n \n ** Με τα παρακάτω στοιχεία καταχωρείσαι σαν pet sitter στην εφαρμογή.</string>
    <string name="required_fields_prof">* Υποχρεωτικά πεδία. \n \n ** Με τα παρακάτω στοιχεία καταχωρείσαι σαν επαγγελματίας στην εφαρμογή.</string>
    <string name="required_fields">* Υποχρεωτικά πεδία.</string>
    <string name="swipe_to_edit_delete">Σύρετε αριστερά για επεξεργασία/διαγραφή.</string>
    <string name="image_uploading_on_progress">Ανέβασμα φωτογραφίας σε εξέλιξη. Παρακαλώ περιμένετε.</string>
    <string name="success_action">Η ενέργεια έγινε επιτυχώς.</string>
    <string name="please_fill_out_search_filters">Παρακαλώ συμπλήρωσε κάποιο φίλτρο αναζήτησης.</string>
    <string name="no_items">Δεν υπάρχουν διαθέσιμα στοιχεία.</string>
    <string name="no_owner_created">Για να δεις τη συγκεκριμένη λειτουργία πρέπει να είσαι ιδιοκτήτης κατοικίδιου.\n\n Μπορείς να γίνεις ιδιοκτήτης μέσου του μενού Τα κατοικίδια μου.</string>
    <string name="city_no_match">Η συγκεκριμένη πόλη δεν είναι διαθέσιμη.</string>
    <string name="prof_categories_list_empty">Παρακαλώ επίλεξε τουλάχιστον μία κατηγορία για την επιχείρηση σου.</string>
    <string name="race_not_match">Η συγκεκριμένη φυλή δεν είναι διαθέσιμη. Επιλέξτε μία από τις προτεινόμενες κατά την πληκτρολόγηση.</string>
    <string name="city_race_not_match">Η συγκεκριμένη πόλη ή φυλή δεν είναι διαθέσιμη.</string>
    <string name="no_owner_exists">Δεν βρέθηκε ιδιοκτήτης για το συγκεκριμένο λογαριασμό.</string>
    <string name="no_petsitter_exists">Δεν βρέθηκε pet sitter για το συγκεκριμένο λογαριασμό.</string>
    <string name="not_valid_age">Μη έγκυρος αριθμός ηλικίας</string>
    <string name="invalid_date">Μη έγκυρη ημερομηνία.</string>
    <string name="no_data">Δεν βρέθηκαν αποτελέσματα.</string>
    <string name="dates_filter_required">Παρακαλώ συμπλήρωσε τις ημερομηνίες αναζήτησης.</string>
    <string name="end_date_smaller_than_start_date">Το φίλτρο έως πρέπει να είναι μικρότερο από το από.</string>
    <string name="no_available_pets_for_booking">Δεν υπάρχουν διαθέσιμα κατοικίδια για ανάθεση.</string>
    <string name="no_searched_services">Δεν υπάρχουν υπηρεσίες</string>
    <string name="booking_already_pending">Δεν μπορείς να κάνεις νέα αναθεση. Υπάρχει μία σε εξέλιξη.</string>
    <string name="new_sitter_booking_msg">Νέα αίτηση ανάθεσης φύλαξης.</string>
    <string name="manipulate_new_sitter_booking_title">Αίτημα φύλαξης</string>
    <string name="rating_not_valid">Η βαθμολογία δεν είναι έγκυρη</string>
    <string name="no_prof_exists">Δεν έχετε καταχωρήσει επιχείρηση μέχρι τώρα.</string>
    <string name="pick_image_dialog">pick_img_dialog</string>
    <string name="clear_image_dialog">clear_img_dialog</string>
    <string name="profile_photo_gr">ΕΙΚΟΝΑ ΠΡΟΦΙΛ</string>
    <string name="name_gr">ΟΝΟΜΑ</string>
    <string name="surname_gr">ΕΠΙΘΕΤΟ</string>
    <string name="birthdate_gr">ΗΜ. ΓΕΝΝΗΣΗΣ</string>
    <string name="city_gr">ΠΟΛΗ</string>
    <string name="phone_gr">ΤΗΛΕΦΩΝΟ</string>
    <string name="remove">Αφαιρεση</string>
    <string name="app_logo">app_logo</string>
    <string name="divider">divider</string>
    <string name="signin">Συνδεση</string>
    <string name="forgot_password_label">Ξέχασα τον κωδικό μου!</string>
    <string name="not_member_label">Δεν είστε μέλος; Εγγραφή.</string>
    <string name="facebook_singnin_label">Συνδεση μεσω facebook</string>
    <string name="google_signin_label">Συνδεση μεσω google</string>
    <string name="lost">Χάθηκα!</string>
    <string name="found">Βρέθηκα!</string>
    <string name="email_plhldr">*<u>Email</u></string>
    <string name="password_plhldr">*<u>Κωδικός</u></string>
    <string name="name_plhldr">*<u>Όνομα</u></string>
    <string name="surname_plhldr">*<u>Επίθετο</u></string>
    <string name="birth_date_plhldr">*<u>Ημ. γέννησης</u></string>
    <string name="city_plhldr"><u>Πόλη</u></string>
    <string name="phone_plhldr"><u>Τηλέφωνο</u></string>
    <string name="image_cont_desc">cont_desc</string>
</resources>